--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
       text-align: center;
     }
 
-    a, a:visited {
+    a,
+    a:visited {
       color: #3f5dff;
     }
 
@@ -23,7 +24,9 @@
       margin-left: 10px;
     }
 
-    a:hover, a:focus, a:active {
+    a:hover,
+    a:focus,
+    a:active {
       color: #001956;
     }
 
@@ -59,7 +62,7 @@
     <h1>loopback-web-app</h1>
     <p>Version 1.0.0</p>
 
-    <h3>OpenAPI spec: <a href="/openapi.json">/openapi.json</a></h3>
+    <h3>[updated]OpenAPI spec: <a href="/openapi.json">/openapi.json</a></h3>
     <h3>API Explorer: <a href="/explorer">/explorer</a></h3>
   </div>
 
